--- a/hotel-management/src/main/resources/application.properties
+++ b/hotel-management/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-server.port=6039
-
-spring.data.mongodb.uri=mongodb://karthik:1234@ip-172-31-38-142.ap-south-1.compute.internal/Hotel
+spring.data.mongodb.uri=mongodb://karthik:1234@ec2-13-234-17-222.ap-south-1.compute.amazonaws.com/Hotel
